--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "1.0.0-semantically-released",
   "description": "Footer component for use when building Open edX frontend applications",
   "main": "dist/index.js",
+  "exports": {
+    ".": {
+      "import": "./src/index.js"
+    },
+    "./scss": {
+      "import": "./src/_footer.scss"
+    }
+  },
   "publishConfig": {
     "access": "public"
   },
@@ -43,6 +51,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.1",
     "husky": "8.0.3",
+    "jest-environment-jsdom": "^29.7.0",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -50,23 +59,21 @@
     "react-router-dom": "6.21.3",
     "react-test-renderer": "17.0.2",
     "redux": "4.2.1",
-    "semantic-release": "21.1.2"
+    "semantic-release": "21.1.2",
+    "ts-jest": "^29.1.2"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "6.5.2",
     "@fortawesome/free-brands-svg-icons": "6.5.2",
     "@fortawesome/free-regular-svg-icons": "6.5.2",
     "@fortawesome/free-solid-svg-icons": "6.5.2",
-    "@fortawesome/react-fontawesome": "0.2.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "lodash": "^4.17.21",
-    "ts-jest": "^29.1.2"
+    "@fortawesome/react-fontawesome": "0.2.0"
   },
   "peerDependencies": {
     "@edx/frontend-platform": "^7.0.0 || ^8.0.0",
     "@openedx/paragon": ">= 21.11.3 < 23.0.0",
     "prop-types": "^15.5.10",
-    "react": "^16.9.0 || ^17.0.0",
-    "react-dom": "^16.9.0 || ^17.0.0"
+    "react": "^17 || ^18",
+    "react-dom": "^17 || ^18"
   }
 }
