--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
     "@edx/browserslist-config": "^1.1.1",
     "@edx/frontend-platform": "8.0.4",
     "@edx/reactifex": "^2.1.1",
-    "@openedx/frontend-build": "14.0.10",
+    "@openedx/frontend-build": "github:edunext/frontend-build#dcoa/design-tokens-support",
     "@openedx/frontend-plugin-framework": "^1.1.2",
-    "@openedx/paragon": "22.6.0",
+    "@openedx/paragon": "23.0.0-alpha.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.1",
     "husky": "8.0.3",
@@ -65,7 +65,7 @@
   },
   "peerDependencies": {
     "@edx/frontend-platform": "^7.0.0 || ^8.0.0",
-    "@openedx/paragon": ">= 21.11.3 < 23.0.0",
+    "@openedx/paragon": ">= 21.11.3 < 23.0.0 || 23.0.0-alpha.1",
     "prop-types": "^15.5.10",
     "react": "^16.9.0 || ^17.0.0",
     "react-dom": "^16.9.0 || ^17.0.0"
