--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
   "devDependencies": {
     "@edx/brand": "npm:@openedx/brand-openedx@^1.2.2",
     "@edx/browserslist-config": "^1.1.1",
-    "@edx/frontend-platform": "8.0.4",
+    "@edx/frontend-platform": "7.1.4",
     "@edx/reactifex": "^2.1.1",
-    "@openedx/frontend-build": "github:edunext/frontend-build#dcoa/design-tokens-support",
+    "@openedx/frontend-build": "^13.0.19",
     "@openedx/frontend-plugin-framework": "^1.1.2",
-    "@openedx/paragon": "23.0.0-alpha.1",
+    "@openedx/paragon": "22.2.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.1",
     "husky": "8.0.3",
@@ -59,13 +59,11 @@
     "@fortawesome/free-regular-svg-icons": "6.5.2",
     "@fortawesome/free-solid-svg-icons": "6.5.2",
     "@fortawesome/react-fontawesome": "0.2.2",
-    "jest-environment-jsdom": "^29.7.0",
-    "lodash": "^4.17.21",
-    "ts-jest": "^29.1.2"
+    "lodash": "^4.17.21"
   },
   "peerDependencies": {
-    "@edx/frontend-platform": "^7.0.0 || ^8.0.0",
-    "@openedx/paragon": ">= 21.11.3 < 23.0.0 || 23.0.0-alpha.1",
+    "@edx/frontend-platform": "^7.0.0",
+    "@openedx/paragon": ">= 21.11.3 < 23.0.0",
     "prop-types": "^15.5.10",
     "react": "^16.9.0 || ^17.0.0",
     "react-dom": "^16.9.0 || ^17.0.0"
