--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
   "devDependencies": {
     "@edx/brand": "npm:@openedx/brand-openedx@^1.2.2",
     "@edx/browserslist-config": "^1.1.1",
-    "@edx/frontend-platform": "7.1.4",
+    "@edx/frontend-platform": "https://github.com/open-craft/frontend-platform/releases/download/v7.1.2-token-asu-moe/edx-frontend-platform-7.1.2.tgz",
     "@edx/reactifex": "^2.1.1",
-    "@openedx/frontend-build": "^13.0.19",
-    "@openedx/frontend-plugin-framework": "^1.1.2",
-    "@openedx/paragon": "22.2.2",
+    "@openedx/frontend-build": "github:open-craft/frontend-build#asu-moe/redwood-css",
+    "@openedx/frontend-plugin-framework": "https://github.com/open-craft/frontend-plugin-framework/releases/download/v1.1.2-token-asu-moe/openedx-frontend-plugin-framework-1.1.2.tgz",
+    "@openedx/paragon": "23.0.0-alpha.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^12.1.1",
     "husky": "8.0.3",
@@ -63,7 +63,7 @@
   },
   "peerDependencies": {
     "@edx/frontend-platform": "^7.0.0",
-    "@openedx/paragon": ">= 21.11.3 < 23.0.0",
+    "@openedx/paragon": ">= 21.11.3 < 23.0.0 || 23.0.0-alpha.1",
     "prop-types": "^15.5.10",
     "react": "^16.9.0 || ^17.0.0",
     "react-dom": "^16.9.0 || ^17.0.0"
